feat: Spring Boot upgrade to 3.5.11: extra related changes: dependency management is improved (in the most cases trusted to Spring). Bump dependencies: mapstruct to 1.6.3, net.bytebuddy to 1.17.8, bouncycastle to 1.80, maven-compiler-plugin to 3.15.0, maven-surefire-plugin to 3.1.2. Test classes migrated from Junit4 to Jupiter. Clover plugin is removed.